--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=urlShortenerApp
 spring.datasource.url=jdbc:mysql://localhost:3306/short_project
 spring.datasource.username=springstudent
 spring.datasource.password=Spr!ngstudent123
+#shortening.strategy=random
+shortening.strategy=hash-based
