--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
     volumes:
       - ./mysql-init-files:/docker-entrypoint-initdb.d
 
+  redis:
+    image: redis
+    ports:
+      - 6379:6379
         
   app:
     depends_on:
