--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,15 @@ services:
     volumes:
       - ./mysql-init-files:/docker-entrypoint-initdb.d
 
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
         
   app:
     depends_on:
       - mysqldb
+      - redis
     build: .
     ports:
       - 8080:8080
